Created teh animatoin

--- a/src/app/partials/Content.module.css
+++ b/src/app/partials/Content.module.css
@@ -138,6 +138,11 @@
   .scrollerWrapper::-webkit-scrollbar {
     display: none;
   }
+  .scrollerWrapper::before,
+  .scrollerWrapper::after {
+    width: 0;
+    height: 0;
+  }
 }
 
 .floatingLink {
